--- a/package.json
+++ b/package.json
@@ -43,11 +43,13 @@
     "font-awesome": "^4.7.0",
     "get-google-fonts": "^1.2.2",
     "googleapis": "66.0.0",
+    "html-to-pdfmake": "^2.4.11",
     "html2canvas": "^1.4.1",
     "jquery": "^3.5.1",
     "jspdf": "^1.5.3",
     "ng2-charts": "^3.0.0-rc.3",
     "ngx-color-picker": "^12.0.1",
+    "pdfmake": "^0.2.7",
     "perfect-scrollbar": "1.5.0",
     "popper.js": "^1.16.1",
     "rxjs": "6.6.3",
