--- a/angular.json
+++ b/angular.json
@@ -62,8 +62,8 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "lbd-free-angular-cli:build"
-           
+            "browserTarget": "lbd-free-angular-cli:build",
+            "proxyConfig": "proxy.conf.json"
           },
           "configurations": {
             "production": {
